feat: Add Bootstrap icons, remove back icon, and style system scroll bar
This commit adds the Bootstrap icon CDN for use in the system, removes the back icon from the airplane editing screen, and applies a custom style to the system scroll bar. These changes improve the overall appearance and user experience of the system.

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -18,3 +18,19 @@ footer {
 	height: 15vw;
 	object-fit: cover;
 }
+
+::-webkit-scrollbar {
+	width: 8px;
+	height: 8px;
+	background-color: #f5f5f5; /* Cor de fundo da barra de rolagem */
+}
+
+::-webkit-scrollbar-thumb {
+	background-color: #acacac; /* Cor do polegar (parte móvel) da barra de rolagem */
+	border-radius: 4px;
+}
+
+::-webkit-scrollbar-track {
+	background-color: #f5f5f5; /* Cor do rastreamento (parte imóvel) da barra de rolagem */
+	border-radius: 4px;
+}
